[metadata]
name = simrel
version = attr: simrel.__version__
description = Package for simulation of linear model data
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	statistic
	education
	science
url = https://github.com/simulatr/simrely
download_url = https://pypi.python.org/pypi/simrel
author = Raju Rimal
author_email = raju.rimal@nmbu.no
license = MIT License
platforms = any


[options]
packages = find:
install_requires =
	numpy>=1.9
	pandas
setup_requires =
	Sphinx
python_requires = >=2.7, >=3
tests_require =
	pytest


[options.packages.find]
exclude =
	tests
	docs


[sdist]
# formats=zip
# keep-temp=0


[wheel]
universal=1


[tool:pytest]
# addopts = --pdbcls pudb.debugger:Debugger --pdb --capture=no
testpaths = tests
