[metadata]
name = pysimrel
version = attr: pysimrel.__version__
description = Simulating data from linear model data
long_description = file: README.md
long_description_content_type = text/x-rst
keywords =
	statistic
	simulation
url = https://github.com/simulatr/pysimrel
download_url = https://pypi.python.org/pypi/pysimrel
author = Raju Rimal
author_email = raju.rimal@nmbu.no
# maintainer = Thomas Graff
# maintainer_email = graff.thomas@gmail.com
classifiers =
	Natural Language :: English
	Development Status :: 4 - Beta
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Mathematics
license = BSD License
platforms = any


[options]
packages = find:
install_requires =
	numpy>=1.9
setup_requires =
	Sphinx
python_requires =
	> 2.6
tests_require =
	pytest


[options.packages.find]
exclude =
	tests
	docs


[sdist]
# formats=zip
# keep-temp=0


[wheel]
universal=1
